@@ -14,7 +14,7 @@
 differences are found, then the patch has passed the tests.  If any tests fail, then the patch cannot be committed until the
 discrepancies in the tests are resolved.</p>
 
-<p>Regression tests must be run on Tiger, since the expected results checked in were generated on Tiger.</p>
+<p>Regression tests must be run on Leopard, since the expected results checked in were generated on Leopard.</p>
 
 
 <h3>The JavaScriptCore Tests</h3>
