@@ -1,3 +1,15 @@
+2009-06-10  Brent Fulgham  <bfulgham@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Fixes https://bugs.webkit.org/show_bug.cgi?id=26309.
+        Update a few items in the testing language to:
+        (1) Reflect results are now generated with Leopard (not Tiger)
+        (2) Explain how to generate pixel-level layout tests.
+
+        * quality/testing.html:
+        * quality/testwriting.html:
+
 2009-06-05  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.com>
 
         Bug 26188: Clarify some of the cases in the coding style guide
